--- a/module-2/lab-intro-recommender-systems/your-code/main.ipynb
+++ b/module-2/lab-intro-recommender-systems/your-code/main.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -476,129 +476,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Apricots - Halves</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>25.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Apricots Fresh</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>25.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Arizona - Green Tea</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Artichokes - Jerusalem</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Assorted Desserts</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>25.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 1000 columns</p>\n",
+       "<p>5 rows × 1000 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -609,11 +489,6 @@
        "Appetizer - Mushroom Tart            0.0    0.0    0.0    0.0    0.0    0.0   \n",
        "Appetizer - Sausage Rolls            0.0    0.0    0.0    0.0    0.0    0.0   \n",
        "Apricots - Dried                     1.0    0.0    0.0    0.0    1.0    0.0   \n",
-       "Apricots - Halves                    0.0    0.0    1.0    0.0    0.0    0.0   \n",
-       "Apricots Fresh                       0.0    0.0    1.0    0.0    0.0    1.0   \n",
-       "Arizona - Green Tea                  0.0    0.0    0.0    0.0    0.0    0.0   \n",
-       "Artichokes - Jerusalem               0.0    0.0    0.0    0.0    0.0    0.0   \n",
-       "Assorted Desserts                    1.0    0.0    0.0    0.0    0.0    0.0   \n",
        "\n",
        "CustomerID                         477    639    649    669    ...  97697  \\\n",
        "ProductName                                                    ...          \n",
@@ -622,11 +497,6 @@
        "Appetizer - Mushroom Tart            0.0    1.0    0.0    0.0  ...   25.0   \n",
        "Appetizer - Sausage Rolls            0.0    0.0    0.0    0.0  ...    0.0   \n",
        "Apricots - Dried                     0.0    0.0    0.0    0.0  ...    0.0   \n",
-       "Apricots - Halves                    0.0    0.0    0.0    0.0  ...    0.0   \n",
-       "Apricots Fresh                       0.0    0.0    0.0    0.0  ...    0.0   \n",
-       "Arizona - Green Tea                  0.0    0.0    1.0    0.0  ...    0.0   \n",
-       "Artichokes - Jerusalem               0.0    0.0    0.0    0.0  ...    0.0   \n",
-       "Assorted Desserts                    0.0    1.0    0.0    0.0  ...    0.0   \n",
        "\n",
        "CustomerID                         97753  97769  97793  97900  97928  98069  \\\n",
        "ProductName                                                                   \n",
@@ -635,11 +505,6 @@
        "Appetizer - Mushroom Tart            0.0    0.0    0.0    0.0    0.0    0.0   \n",
        "Appetizer - Sausage Rolls            0.0    0.0    0.0   25.0   25.0   25.0   \n",
        "Apricots - Dried                    25.0    0.0    0.0    0.0    0.0    0.0   \n",
-       "Apricots - Halves                    0.0    0.0    0.0   25.0   50.0   25.0   \n",
-       "Apricots Fresh                       0.0    0.0    0.0    0.0    0.0    0.0   \n",
-       "Arizona - Green Tea                  0.0    0.0    0.0    0.0   25.0    0.0   \n",
-       "Artichokes - Jerusalem               0.0    0.0    0.0    0.0    0.0    0.0   \n",
-       "Assorted Desserts                    0.0    0.0    0.0    0.0    0.0   25.0   \n",
        "\n",
        "CustomerID                         98159  98185  98200  \n",
        "ProductName                                             \n",
@@ -648,16 +513,11 @@
        "Appetizer - Mushroom Tart            0.0   25.0    0.0  \n",
        "Appetizer - Sausage Rolls            0.0   25.0    0.0  \n",
        "Apricots - Dried                     0.0    0.0    0.0  \n",
-       "Apricots - Halves                    0.0   25.0   25.0  \n",
-       "Apricots Fresh                       0.0    0.0   25.0  \n",
-       "Arizona - Green Tea                  0.0    0.0    0.0  \n",
-       "Artichokes - Jerusalem               0.0    0.0    0.0  \n",
-       "Assorted Desserts                    0.0    0.0   25.0  \n",
        "\n",
-       "[10 rows x 1000 columns]"
+       "[5 rows x 1000 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +525,7 @@
    "source": [
     "piv = pd.pivot_table(total_quantity, values='Quantity', index=['ProductName'], columns=['CustomerID'])\n",
     "piv = piv.fillna(0)\n",
-    "piv.head(10)"
+    "piv.head()"
    ]
   },
   {
@@ -677,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,14 +803,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "CustomerID\n",
-       "33      1.000000\n",
        "264     0.087047\n",
        "3535    0.087047\n",
        "3317    0.087047\n",
@@ -964,7 +823,7 @@
     }
    ],
    "source": [
-    "similar_5 = customer33.sort_values(ascending=False).head(6)\n",
+    "similar_5 = customer33.sort_values(ascending=False)[1:6]\n",
     "display(similar_5)"
    ]
   },
@@ -977,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1008,33 +867,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>33</td>\n",
-       "      <td>Apricots - Dried</td>\n",
+       "      <th>131</th>\n",
+       "      <td>264</td>\n",
+       "      <td>Apricots - Halves</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>33</td>\n",
-       "      <td>Assorted Desserts</td>\n",
+       "      <th>132</th>\n",
+       "      <td>264</td>\n",
+       "      <td>Apricots Fresh</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>33</td>\n",
-       "      <td>Bandage - Flexible Neon</td>\n",
+       "      <th>133</th>\n",
+       "      <td>264</td>\n",
+       "      <td>Bacardi Breezer - Tropical</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>33</td>\n",
-       "      <td>Bar Mix - Pina Colada, 355 Ml</td>\n",
+       "      <th>134</th>\n",
+       "      <td>264</td>\n",
+       "      <td>Bagel - Plain</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>33</td>\n",
-       "      <td>Beans - Kidney, Canned</td>\n",
+       "      <th>135</th>\n",
+       "      <td>264</td>\n",
+       "      <td>Banana - Leaves</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1042,21 +901,26 @@
        "</div>"
       ],
       "text/plain": [
-       "   CustomerID                    ProductName  Quantity\n",
-       "0          33               Apricots - Dried         1\n",
-       "1          33              Assorted Desserts         1\n",
-       "2          33        Bandage - Flexible Neon         1\n",
-       "3          33  Bar Mix - Pina Colada, 355 Ml         1\n",
-       "4          33         Beans - Kidney, Canned         1"
+       "     CustomerID                 ProductName  Quantity\n",
+       "131         264           Apricots - Halves         1\n",
+       "132         264              Apricots Fresh         1\n",
+       "133         264  Bacardi Breezer - Tropical         1\n",
+       "134         264               Bagel - Plain         1\n",
+       "135         264             Banana - Leaves         1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_quantity.head()"
+    "\n",
+    "similar_5_df = similar_5.reset_index()\n",
+    "lista_similars = list(similar_5_df['CustomerID'])\n",
+    "records = total_quantity[total_quantity['CustomerID'].isin(lista_similars)]\n",
+    "records.head()\n",
+    "\n"
    ]
   },
   {
@@ -1070,10 +934,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ProductName</th>\n",
+       "      <th>Quantity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Butter - Unsalted</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Soup - Campbells Bean Medley</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Towels - Paper / Kraft</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Wine - Ej Gallo Sierra Valley</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pepper - Black, Whole</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     ProductName  Quantity\n",
+       "0              Butter - Unsalted         3\n",
+       "1   Soup - Campbells Bean Medley         3\n",
+       "2         Towels - Paper / Kraft         3\n",
+       "3  Wine - Ej Gallo Sierra Valley         3\n",
+       "4          Pepper - Black, Whole         3"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aggregate = records.groupby(['ProductName'])['Quantity'].sum().sort_values(ascending = False).reset_index()\n",
+    "aggregate.head()"
+   ]
   },
   {
    "cell_type": "markdown",
