--- a/module-2/lab-intro-recommender-systems/your-code/main.ipynb
+++ b/module-2/lab-intro-recommender-systems/your-code/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "4        20  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,8 +164,15 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#Se agrupa las dimensiones en torno a la variable Quantity ya que esta es la métrica necesaria para el estudio."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +250,7 @@
        "           Beans - Kidney, Canned                1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,8 +269,17 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# Repasar pivot_table: Muy útil como herramienta de análisis.\n",
+    "\n",
+    "    #Sitúa como índice una variable contrastada con otra como columna elegdas y se genera una matriz que contiene como valores una tercera variable común. Variables surgidas de un .groupby por ejemplo, donde estas se encuentras relacionadas."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +512,7 @@
        "[5 rows x 1000 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,8 +532,15 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#Conservar código (Tool_Copy_Paste): Establece la distancia euclídea basada en una matriz(ej:Paso2) de coordenadas que hay entre los elementos de una muestra."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +773,7 @@
        "[5 rows x 1000 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,41 +794,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similitudes = pivotdataSquare[264].sort_values(ascending=False)[1:6]\n",
+    "\n",
+    "print(similitudes)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#Repasar .index.to_list(): Toma los índices indicados y los incluye en una nueva lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CustomerID\n",
-      "1008    0.088152\n",
-      "2617    0.088152\n",
-      "1072    0.087410\n",
-      "33      0.087047\n",
-      "3535    0.086333\n",
-      "Name: 264, dtype: float64\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "[1008, 2617, 1072, 33, 3535]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "similitudes = pivotdataSquare[264].sort_values(ascending=False)[1:6]\n",
+    "SimilarCustoms = similitudes.index.to_list()\n",
     "\n",
-    "print(similitudes)\n",
-    "\n",
-    "x = similitudes.index.to_list()\n",
-    "\n",
-    "x"
+    "SimilarCustoms"
    ]
   },
   {
@@ -817,20 +841,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Repasar .reset_index()\n",
+    "\n",
     "customersrecom = GroupData.reset_index()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 112,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "fiveCustom = customersrecom[customersrecom['CustomerID'].isin(x)]"
+    "#Repasar .isin(): \n",
+    "En este caso está iterando los elemenos de una columna Y SI está en la variable 'X' serán esas las filas que deje en el uevo DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-22-584b6af5b2cd>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-584b6af5b2cd>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    fiveCustom = customersrecom[customersrecom['CustomerID'].isin(SimilarCustoms)\u001b[0m\n\u001b[0m                                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "fiveCustom = customersrecom[customersrecom['CustomerID'].isin(SimilarCustoms)"
    ]
   },
   {
@@ -844,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -879,45 +922,45 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Cheese - Bocconcini</th>\n",
-       "      <th>1008</th>\n",
-       "      <td>2</td>\n",
+       "      <th>Longos - Grilled Salmon With Bbq</th>\n",
+       "      <th>90069</th>\n",
+       "      <td>92</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Mushrooms - Black, Dried</th>\n",
-       "      <th>2617</th>\n",
-       "      <td>2</td>\n",
+       "      <th>Yeast Dry - Fermipan</th>\n",
+       "      <th>80694</th>\n",
+       "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Salsify, Organic</th>\n",
-       "      <th>33</th>\n",
-       "      <td>2</td>\n",
+       "      <th>Bread - French Baquette</th>\n",
+       "      <th>97063</th>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Lettuce - Spring Mix</th>\n",
-       "      <th>33</th>\n",
-       "      <td>2</td>\n",
+       "      <th>Spice - Peppercorn Melange</th>\n",
+       "      <th>96524</th>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Veal - Inside, Choice</th>\n",
-       "      <th>33</th>\n",
-       "      <td>2</td>\n",
+       "      <th>Fenngreek Seed</th>\n",
+       "      <th>97029</th>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                     Quantity\n",
-       "ProductName              CustomerID          \n",
-       "Cheese - Bocconcini      1008               2\n",
-       "Mushrooms - Black, Dried 2617               2\n",
-       "Salsify, Organic         33                 2\n",
-       "Lettuce - Spring Mix     33                 2\n",
-       "Veal - Inside, Choice    33                 2"
+       "                                             Quantity\n",
+       "ProductName                      CustomerID          \n",
+       "Longos - Grilled Salmon With Bbq 90069             92\n",
+       "Yeast Dry - Fermipan             80694             84\n",
+       "Bread - French Baquette          97063             75\n",
+       "Spice - Peppercorn Melange       96524             75\n",
+       "Fenngreek Seed                   97029             75"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,10 +968,11 @@
    "source": [
     "fivecustom_rank = fiveCustom.groupby(['ProductName', 'CustomerID']).sum()\n",
     "\n",
-    "\n",
     "fivecustom_rank = fivecustom_rank.sort_values(['Quantity'], ascending=False)\n",
     "\n",
-    "fivecustom_rank.head()\n"
+    "fivecustom_rank.head()\n",
+    "\n",
+    "#Se ordena ascendentemente para tomar así el ranking de valores mas altos. Es decir, los productos mas comprados."
    ]
   },
   {
@@ -944,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1017,8 +1061,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Cheese - Bocconcini</th>\n",
-       "      <td>2</td>\n",
+       "      <th>Longos - Grilled Salmon With Bbq</th>\n",
+       "      <td>92</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1035,14 +1079,14 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>25</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Muffin - Carrot Individual Wrap</th>\n",
-       "      <td>2</td>\n",
+       "      <th>Yeast Dry - Fermipan</th>\n",
+       "      <td>84</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1053,7 +1097,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1063,68 +1106,48 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Salsify, Organic</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <th>Scampi Tail</th>\n",
+       "      <td>75</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>75</td>\n",
        "      <td>25</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Veal - Inside, Choice</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <th>Spice - Peppercorn Melange</th>\n",
+       "      <td>75</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Beef - Top Sirloin</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>25</td>\n",
@@ -1132,7 +1155,28 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bread - French Baquette</th>\n",
+       "      <td>75</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1142,42 +1186,45 @@
        "</div>"
       ],
       "text/plain": [
-       "                                 Quantity  33  200  264  356  412  464  477  \\\n",
-       "ProductName                                                                   \n",
-       "Cheese - Bocconcini                     2   0    0    0    0    0    0    0   \n",
-       "Muffin - Carrot Individual Wrap         2   0    0    0    0    0    0    0   \n",
-       "Salsify, Organic                        2   2    0    0    0    0    0    0   \n",
-       "Veal - Inside, Choice                   2   2    0    0    0    1    0    0   \n",
-       "Beef - Top Sirloin                      1   0    0    0    0    0    0    1   \n",
+       "                                  Quantity  33  200  264  356  412  464  477  \\\n",
+       "ProductName                                                                    \n",
+       "Longos - Grilled Salmon With Bbq        92   0    0    0    0    0    0    0   \n",
+       "Yeast Dry - Fermipan                    84   0    0    0    0    0    0    0   \n",
+       "Scampi Tail                             75   0    0    0    0    1    0    0   \n",
+       "Spice - Peppercorn Melange              75   0    0    0    0    1    0    0   \n",
+       "Bread - French Baquette                 75   0    0    0    0    0    0    0   \n",
        "\n",
-       "                                 639  649  ...  97697  97753  97769  97793  \\\n",
-       "ProductName                                ...                               \n",
-       "Cheese - Bocconcini                0    0  ...      0      0      0      0   \n",
-       "Muffin - Carrot Individual Wrap    0    0  ...      0      0      0      0   \n",
-       "Salsify, Organic                   0    0  ...     25      0      0      0   \n",
-       "Veal - Inside, Choice              1    0  ...      0      0      0      0   \n",
-       "Beef - Top Sirloin                 0    0  ...      0      0     25      0   \n",
+       "                                  639  649  ...  97697  97753  97769  97793  \\\n",
+       "ProductName                                 ...                               \n",
+       "Longos - Grilled Salmon With Bbq    0    0  ...      0      0      0      0   \n",
+       "Yeast Dry - Fermipan                0    0  ...      0      0      0     25   \n",
+       "Scampi Tail                         0    0  ...      0      0      0      0   \n",
+       "Spice - Peppercorn Melange          0    0  ...      0      0      0      0   \n",
+       "Bread - French Baquette             0    1  ...      0      0      0     25   \n",
        "\n",
-       "                                 97900  97928  98069  98159  98185  98200  \n",
-       "ProductName                                                                \n",
-       "Cheese - Bocconcini                  0      0      0      0      0      0  \n",
-       "Muffin - Carrot Individual Wrap     25      0      0      0      0      0  \n",
-       "Salsify, Organic                     0      0      0      0     50      0  \n",
-       "Veal - Inside, Choice               25      0      0      0      0      0  \n",
-       "Beef - Top Sirloin                   0      0      0      0      0      0  \n",
+       "                                  97900  97928  98069  98159  98185  98200  \n",
+       "ProductName                                                                 \n",
+       "Longos - Grilled Salmon With Bbq      0      0     25      0      0      0  \n",
+       "Yeast Dry - Fermipan                  0      0      0      0      0      0  \n",
+       "Scampi Tail                          75     25      0      0      0      0  \n",
+       "Spice - Peppercorn Melange            0     25      0      0      0      0  \n",
+       "Bread - French Baquette               0     25      0     25      0      0  \n",
        "\n",
        "[5 rows x 1001 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = pd.merge(fivecustom_rank, pivotdata, on=['ProductName'], how='inner')\n",
-    "x=x[x[264]==0]\n",
-    "x.sort_values(['Quantity'], ascending= False).head()"
+    "#1)\n",
+    "merge = pd.merge(fivecustom_rank, pivotdata, on=['ProductName'], how='inner')\n",
+    "#2)          \n",
+    "not_purchased=merge[merge[264]==0] #Filtro para tomar los productor que se han comprado 0 veces del cosumidor 264.\n",
+    "#3)           \n",
+    "not_purchased.sort_values(['Quantity'], ascending= False).head()"
    ]
   },
   {
