--- a/module-2/lab-time-series/your-code/main.ipynb
+++ b/module-2/lab-time-series/your-code/main.ipynb
@@ -12,11 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import numpy and pandas\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "\n"
    ]
   },
@@ -33,14 +34,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "attitude.roll         0\n",
+       "attitude.pitch        0\n",
+       "attitude.yaw          0\n",
+       "gravity.x             0\n",
+       "gravity.y             0\n",
+       "gravity.z             0\n",
+       "rotationRate.x        0\n",
+       "rotationRate.y        0\n",
+       "rotationRate.z        0\n",
+       "userAcceleration.x    0\n",
+       "userAcceleration.y    0\n",
+       "userAcceleration.z    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this code:\n",
     "\n",
     "sensor = pd.read_csv('../sub_1.csv')\n",
-    "sensor.drop(columns=['Unnamed: 0'], inplace=True)"
+    "sensor.drop(columns=['Unnamed: 0'], inplace=True)\n"
    ]
   },
   {
@@ -52,12 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "sensor.head()\n"
    ]
   },
   {
@@ -69,11 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1751, 12)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n",
+    "sensor.isnull().sum()\n",
     "\n"
    ]
   },
@@ -90,8 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n",
-    "\n"
+    "sensor.shape\n"
    ]
   },
   {
@@ -299,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
